--- a/metodos-numericos/package.json
+++ b/metodos-numericos/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Alex-M21.github.io/Proyecto_Aplicada_3_2026",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+}
+,
   "dependencies": {
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
@@ -24,10 +26,12 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "vite": "npm:rolldown-vite@7.2.2"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.2"
   }
+  
 }
