--- a/metodos-numericos/package.json
+++ b/metodos-numericos/package.json
@@ -3,14 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://Alex-M21.github.io/Proyecto_Aplicada_3_2026",
-  "scripts": {
+  
+ "scripts": {
   "dev": "vite",
   "build": "vite build",
   "preview": "vite preview",
   "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
+  "deploy": "gh-pages -d dist -r https://github.com/Alex-M21/Proyecto_Aplicada_3_2026.git"
 }
+
 
 ,
   "dependencies": {
